--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9C27B0"
+    android:background="#CF5981"
     android:padding="10dp"
     tools:context=".MainActivity">
 
@@ -26,13 +26,15 @@
         android:layout_below="@id/notestitle" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/addnewnotebtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cornerRadius="35dp"
+        android:layout_alignParentBottom="true"
+        android:backgroundTint="@color/teal_200"
         android:text="Add new note"
-        android:id="@+id/addnewnotebtn"
-        android:textColor="#00B0FF"
-        android:backgroundTint="@color/white"
-        android:layout_alignParentBottom="true"/>
+        android:textColor="#0B0B0B"
+        />
 
 
 </RelativeLayout>
