--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,36 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="10dp"
-    android:background="@drawable/rounded_corner"
-    android:padding="12dp">
+    android:elevation="20dp"
+    app:cardCornerRadius="15dp"
+    android:layout_margin="8dp"
+    android:id="@+id/cardview"
+    android:background="@drawable/rounded_corner">
 
-    <TextView
-        android:id="@+id/titleoutput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        tools:text="My title" />
 
-    <TextView
-        android:id="@+id/descriptionoutput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titleoutput"
-        android:textColor="#393939"
-        tools:text="My long long long descrption" />
 
-    <TextView
-        android:id="@+id/timeoutput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/descriptionoutput"
-        android:gravity="end"
-        android:textColor="#858484"
-        android:textSize="12dp"
-        tools:text="Jan 21 2020 " />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/linearlay"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/titleoutput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textSize="20dp"
+                tools:text="My title" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/descriptionoutput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/titleoutput"
+                android:padding="10dp"
+                android:textColor="#393939"
+                tools:text="My long long long descrption" />
+
+            <TextView
+                android:id="@+id/timeoutput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descriptionoutput"
+                android:gravity="end"
+                android:padding="10dp"
+                android:textColor="#858484"
+                android:textSize="12dp"
+                tools:text="Jan 21 2020 " />
+
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
